<resources>

<!-- FisrtAccess -->
    <string name="app_name">CountOnYou</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="request_bt">request permission</string>
    <string name="guide">
        Welcome and thank you for choosing our application.\n
        This software offers innovative services, through the use of GPS and Bluetooth.
        The user interface is simple and intuitive. After you will have accepted to grant the required permissions
        the screen of your device will display the geographical map of you position, from there you will be able to navigate
        manually or through the search bar above the map.\n
        When you will find a place of your interest, you will be able to obtain info in real time on the number of people
        present in that area, using the central button below the map.\n
        You will also be able to memorize your favourite locations and the places you have been to with the other two buttons
        below the map.\n
        We cordially invite you to consult the upper right menu in case of any doubt or question regarding the app,
        we hope you will find it useful.\n
        \n
        Kotjava Team

    </string>
    <string name="resource_request">
        To work properly, the application needs access
        to the following device resources:\n
        - Bluetooth;\n
        - GPS;\n
        - Internal memory of the device;\n
        By clicking on the following button you accept to give
        access to said resources.
    </string>
    <string name="accept_resreq">Accept</string>
    <string name="request_check">Check request</string>


<!-- MapsActivity menu -->
    <string name="helpitem">Help</string>
    <string name="guideitem">Guide</string>
    <string name="faqitem">FAQ</string>
    <string name="contactsitem">Contact us</string>
    <string name="creditsitem">Credits</string>
    <string name="updateitem">Update</string>
    <string name="shareitem">Share the app</string>
    <string name="rateitem">Rate the app</string>
    <string name="scanitem">Scan</string>
    <string name="autoscanitem">Activate auto-scan</string>


<!-- MapsActivity bottoni -->
    <string name="favouritesitem">Favourites</string>
    <string name="statsitem">Crowd Data</string>
    <string name="locationitem">Local Informations</string>
    <string name="historyitem">Visited</string>

    <string name="favdescription">Favourite Places</string>
    <string name="statdescription">Crowd data</string>
    <string name="locdescription">Local Informations</string>
    <string name="histdescription">Already Visited Places</string>

<!-- FAQ -->
    <string-array
        name="questions">
        <item>What is the purpose of this application?</item>
        <item>What is the purpose of the required authorizations?</item>
        <item>Is this the app\'s final version?</item>
    </string-array>

    <string-array
        name="answers">
        <item>
            The application\'s purpose is to ease the life of its users by allowing them to be informed on how many people are gathered in one place,
            so as to allow to plan ahead to avoid lines, be it when in need of medical consultation or to go shopping, in a easily and without
            slowing their devices.
        </item>
        <item>
            To work as intended the application needs access to resources of the device such as: GPS, Bluetooth
            and some storage space in the memory.
            The gathered data are used ONLY for the expressed purpose of the software and do NOT encompass sensitive information of any kind.
        </item>
        <item>
            This application was born as a school project, but it is possible that it will be developed further in the future;
            some ideas are already there and if the application will receive the support of the general public it could be possible
            to expand it.
        </item>
    </string-array>


<!-- Contatti -->
    <string name="job1">Software developer</string>
    <string name="job2">Graphic designer</string>
    <string name="job3">Web/Server manager</string>
    <string name="job4">Docs designer</string>

    <string name="contact1">
        Daniele De Battista\n
        Email 1\n
        Numero di telefono 1\n
    </string>
    <string name="contact2">
        Lorenzo Panico\n
        Email 2\n
        Numero di telefono 2\n
    </string>
    <string name="contact3">
        Davide Favaro\n
        Email 3\n
        Numero di telefono 3\n
    </string>
    <string name="contact4">
        Diolen Hysenaj\n
        Email 4\n
        Numero di telefono 4\n
    </string>
    <string name="contact5">
        Matteo De Col\n
        Email 5\n
        Numero di telefono 5\n
    </string>


<!-- Credits -->
    <string name="credits1">
        The app has been created thanks to:\n
    </string>
    <string name="credits2">
        Daniele De Battista\n\n
        Lorenzo Panico\n\n
        Davide Favaro\n\n
        Diolen Hysenaj\n\n
        Metteo De Col\n
    </string>
    <string name="credits3">
        As a project for the Software Engineering course at university Ca\' Foscari of Venice.
    </string>


<!-- Aggiornamento -->
    <string name="update_version">App version %s</string>
    <string name="update_not_available">The application is up to date</string>
    <string name="update_available">A new update is available</string>


<!-- PLACEHOLDERS -->
    <!-- Menu -->
    <string name="placeholder_guide">Guide</string>
    <string name="placeholder_faq">Frequently Asked Questions</string>
    <string name="placeholder_contacts">Contact us</string>
    <string name="placeholder_credits">Credits</string>

    <!-- Bottoni -->
    <string name="placeholder_favourites">Favourites</string>
    <string name="placeholder_history">Visited</string>

    <!-- FAQ -->
    <string name="placeholder_question">Question?</string>
    <string name="placeholder_answer">Answer!</string>

    <!-- Fragments -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>