<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreditsFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits1"
        android:textAlignment="viewStart"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="33dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits2"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textView1"
        tools:layout_editor_absoluteX="0dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/credits3"
        android:textAlignment="textStart"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_editor_absoluteX="64dp" />

</androidx.constraintlayout.widget.ConstraintLayout>